5.Kubernetes/task_3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          args: ["server", "/data", "--console-address", ":9001"]          
          ports:
            - containerPort: 9001
          volumeMounts:
            - name: data
              mountPath: "/data"              
            - name: empty
              mountPath: "/empty"              
        - image: nginx:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          name: nginx
          ports:
          - containerPort: 80
          volumeMounts:
            - name: config-nginx
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-nginx
          configMap:
            name: nginx-configmap              
        - name: data
          persistentVolumeClaim:
            claimName: minio-deployment-claim
        - name: empty
          emptyDir: {}
